--- a/travel-event-host-app/package.json
+++ b/travel-event-host-app/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "cd .. && husky install travel-event-host-app/.husky"
+    "prepare": "cd .. && husky install travel-event-host-app/.husky",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.515.0",
@@ -27,11 +29,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-autocomplete": "^2.7.3",
+    "uninstall": "^0.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
     "@types/bcrypt": "^5.0.2",
     "@types/google.maps": "^3.55.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -39,10 +46,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   },
   "lint-staged": {
@@ -53,4 +63,5 @@
       "prettier --write --ignore-unknown"
     ]
   }
+  
 }
