--- a/travel-event-host-app/package.json
+++ b/travel-event-host-app/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "prepare": "cd .. && husky install travel-event-host-app/.husky",
     "test": "clear && jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.515.0",
